--- a/README.Rmd
+++ b/README.Rmd
@@ -183,6 +183,15 @@ df |>
   pander::pandoc.list(add.end.of.list = FALSE)
 ```
 
+## LaTeX
+
+```{r linksLaTeX, echo=FALSE, message=FALSE, warning=FALSE}
+df |> 
+  filter(category == "latex") |> 
+  pull(title) |> 
+  pander::pandoc.list(add.end.of.list = FALSE)
+```
+
 # Culture
 
 ## 🎨 Art
