--- a/README.Rmd
+++ b/README.Rmd
@@ -331,6 +331,27 @@ df |>
   pander::pandoc.list(add.end.of.list = FALSE)
 ```
 
+## Italy
+
+```{r linksItaly, echo=FALSE, message=FALSE, warning=FALSE}
+df |> 
+  filter(category == "Italy") |> 
+  pull(title) |> 
+  pander::pandoc.list(add.end.of.list = FALSE)
+
+```
+
+
+## Nigeria
+
+```{r linksNigeria, echo=FALSE, message=FALSE, warning=FALSE}
+df |> 
+  filter(category == "Nigeria") |> 
+  pull(title) |> 
+  pander::pandoc.list(add.end.of.list = FALSE)
+
+```
+
 ## Russia
 
 ```{r linksRussia, echo=FALSE, message=FALSE, warning=FALSE}
