--- a/README.Rmd
+++ b/README.Rmd
@@ -313,6 +313,15 @@ df |>
   pander::pandoc.list(add.end.of.list = FALSE)
 ```
 
+## Azerbaijan
+
+```{r linksAzerbaijan, echo=FALSE, message=FALSE, warning=FALSE}
+df |> 
+  filter(category == "Azerbaijan") |> 
+  pull(title) |> 
+  pander::pandoc.list(add.end.of.list = FALSE)
+```
+
 ## United Kingdom
 
 ```{r linksUK, echo=FALSE, message=FALSE, warning=FALSE}
