--- a/README.Rmd
+++ b/README.Rmd
@@ -390,6 +390,15 @@ df |>
   pander::pandoc.list(add.end.of.list = FALSE)
 ```
 
+## Greece
+
+```{r linksGreece, echo=FALSE, message=FALSE, warning=FALSE}
+df |>
+    filter(category == "Greece") |>
+    pull(title) |>
+    pander::pandoc.list(add.end.of.list = FALSE)
+```
+
 ## Saudi Arabia
 
 ```{r linksSaudiArabia, echo=FALSE, message=FALSE, warning=FALSE}
@@ -413,6 +422,15 @@ df |>
 ```{r linksJapan, echo=FALSE, message=FALSE, warning=FALSE}
 df |>
     filter(category == "Japan") |>
+    pull(title) |>
+    pander::pandoc.list(add.end.of.list = FALSE)
+```
+
+## Mexico
+
+```{r linksMexico, echo=FALSE, message=FALSE, warning=FALSE}
+df |>
+    filter(category == "Mexico") |>
     pull(title) |>
     pander::pandoc.list(add.end.of.list = FALSE)
 ```
